--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,7 +14,7 @@
 }
 
 body {
-  /* background-color: blue; */
-  background-image: url("/herobg.png");
+  background-color: blue;
+  /* background-image: url("/herobg.png"); */
   height: 1000px;
 }
