--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -60,3 +60,29 @@
   -webkit-animation: scale-up-ver-top 0.2s ease-out both;
   animation: scale-up-ver-top 0.2s ease-out both;
 }
+
+@-webkit-keyframes slide-top {
+  0% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+  100% {
+    -webkit-transform: translateY(30px);
+    transform: translateY(30px);
+  }
+}
+@keyframes slide-top {
+  0% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+  100% {
+    -webkit-transform: translateY(30px);
+    transform: translateY(30px);
+  }
+}
+
+.slide-top {
+  -webkit-animation: slide-top 1s linear infinite alternate both;
+  animation: slide-top 1s linear infinite alternate both;
+}
