--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -274,3 +274,15 @@
   background-image: linear-gradient(45deg, #4e6bff, #ff6b6b);
   transform: scale(1.1);
 }
+
+body::-webkit-scrollbar {
+  width: 0.25rem;
+}
+
+body::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #915eff;
+}
